# ECR

./: .gitignore  CMakeLists.txt  Makefile  README.md  ecrprog.c
src/: ecr.c
src/cJSON/: CMakeLists.txt
src/ecr/: CMakeLists.txt  ecr.c  ecr.h
src/ecr/base/: base.h  compat.c  helpers.c  helpers.h  version.h
src/ecr/cjson/: cJSON.c  cJSON_Utils.c
src/ecr/compat/: compat.c  compat.h
src/ecr/debug/: debug.h
src/ecr/job/: job.c  job.h  job_data.c  job_data.h
src/ecr/redis/: redis.h  redis_client.c  redis_client.h
src/ecr/status/: status.c  status.h
src/redis/: CMakeLists.txt  redis_client.c  redis_client.h  redis_client_private.c
test/: test1.c  test_ecr_all  test_ecr_all.c
